# LRT_legged_locomotion_mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml
benchmark/: GaitDynamicPhaseControllerBenchmark.cpp
benchmarks/: BaseTrajectoryPlannerBenchmark.cpp  GaitDynamicPhaseControllerBenchmark.cpp  JointTrajectoryPlannerBenchmark.cpp  LeggedReferenceManagerBenchmark.cpp  SwingTrajectoryPlannerBenchmark.cpp  UtilsVsWrenchCompensator.cpp
demo/meldog_demo/: meldog_demo.cpp
demo/melman_demo/: melman_demo.cpp
floating_base_model/: CMakeLists.txt  README.md  package.xml
floating_base_model/include/floating_base_model/: AccessHelperFunctions.hpp  AccessHelperFunctions.hxx  FactoryFunctions.hpp  FloatingBaseModelInfo.hpp  FloatingBaseModelPinocchioMapping.hpp  ModelHelperFunctions.hpp  PinocchioFloatingBaseDynamics.hpp  PinocchioFloatingBaseDynamicsAD.hpp  QuaterionEulerTransforms.hpp
floating_base_model/include/floating_base_model/path_management/: package_path.h.in
floating_base_model/src/: FactoryFunctions.cpp  FloatingBaseModelInfo.cpp  FloatingBaseModelPinocchioMapping.cpp  ModelHelperFunctions.cpp  PinocchioFloatingBaseDynamics.cpp  PinocchioFloatingBaseDynamicsAD.cpp  QuaterionEulerTransforms.cpp
floating_base_model/test/: AccessHelperFunctionsTest.cpp  FactoryFunctionsTest.cpp  FloatingBaseModelPinocchioMappingTest.cpp  ModelHelperFunctionsTest.cpp  PinocchioFloatingBaseDynamicsTest.cpp  QuaterionEulerTransformsTest.cpp
floating_base_model/test/include/: definitions.h
floating_base_model/test/test_models/: meldog_no_base_link.urdf
legged_locomotion_control/: CMakeLists.txt  package.xml
legged_locomotion_mpc_ros2/: CMakeLists.txt  package.xml
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/demos/meldog_demo/: meldog_definitions.hpp
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/demos/meldog_demo/config/: legged_model.info  task.info
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/demos/melman_demo/: melman_definitions.hpp
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/demos/melman_demo/config/: legged_model.info
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/path_management/: package_path.h.in
legged_locomotion_mpc_ros2/include/legged_locomotion_mpc_ros2/visualization/: LeggedVisializer.hpp  LeggedVisualizer.hpp
legged_locomotion_mpc_ros2/src/demos/meldog_demo/: meldog_demo.cpp  meldog_demo_planar_terrain.cpp  meldog_demo_segmented_terrain.cpp
legged_locomotion_mpc_ros2/src/demos/melman_demo/: melman_demo.cpp
legged_locomotion_mpc_ros2/src/visualization/: LeggedVisualizer.cpp
locomotion_mpc/: CMakeLists.txt  README.md
locomotion_mpc/benchmarks/: GaitDynamicPhaseControllerBenchmark.cpp  JointTrajectoryPlannerBenchmark.cpp  LeggedReferenceManagerBenchmark.cpp  SwingTrajectoryPlannerBenchmark.cpp
locomotion_mpc/src/: main.cpp
src/: main.cpp
src/collision/: CollisionSettings.cpp  PinocchioForwardCollisionKinematicsCppAd.cpp  PinocchoCollisionInterface.cpp
src/common/: ModelHelperFunctions.cpp  ModelSettings.cpp  Pinocchio6DofEndEffectorKinematicsCppAd.cpp  Utils.cpp
src/constraint/: ForceFrictionConeConstraint.cpp  JointLimitsConstraint.cpp  NormalVelocityConstraint.cpp  WrenchFrictionConeConstraint.cpp  Zero3DofVelocityConstraint.cpp  Zero6DofVelocityConstraint.cpp  Zero6DofVelocityCostraint.cpp  ZeroForceConstraint.cpp  ZeroWrenchConstraint.cpp
src/cost/: JointTorqueCost.cpp  QuadraticFinalTrackingCost.cpp  QuadraticTrackingCost.cpp  TerminalTrackingCost.cpp  TrajectoryTrackingCost.cpp
src/dynamics/: LeggedDynamicsAD.cpp
src/initialization/: LeggedInitializer.cpp
src/kinematics/: ForwardEndEffectorKinematicsInfo.cpp  InverseEndEffectorKinematics.cpp  PinocchioForwardEndEffectorKinematicsCppAd.cpp
src/locomotion/: BaseTrajectoryPlanner.cpp  CubicSpline.cpp  FootPhase.cpp  GaitDynamicPhaseController.cpp  GaitParameters.cpp  GaitPlanner.cpp  ModeDynamicSequenceTemplate.cpp  ModeSequenceTemplate.cpp  OverExtensionPenalty.cpp  QuinticSplineSwing.cpp  SingleLegLogic.cpp  SwingSpline3d.cpp  SwingTrajectoryPlanner.cpp
src/logic/: LeggedSynchronizedModule.cpp
src/penalties/: TorqueLimitsPenalty.cpp
src/penalty/: TorqueLimitsPenalty.cpp
src/precomputation/: LeggedPrecomputation.cpp
src/reference_manager/: LeggedReferenceManager.cpp
src/robot_interface/: LeggedInterface.cpp  LeggedLoopshapingInterface.cpp
src/soft_constraint/: EndEffectorPlacementSoftConstraint.cpp  ForceFrictionConeSoftConstraint.cpp  JointLimitsSoftConstraint.cpp  JointTorqueLimitsSoftConstraint.cpp  NormalOrientationSoftConstraint.cpp  SelfCollisionAvoidanceSoftConstraint.cpp  TerrainAvoidanceSoftConstraint.cpp  TorqueLimitsSoftConstraint.cpp  WrenchFrictionConeSoftConstraint.cpp
src/synchronization/: DisturbanceSynchronizedModule.cpp  GaitSynchronizedModule.cpp
src/torque_approx/: PinocchioTorqueApproximationCppAd.cpp
src/trajectory_planners/: BaseTrajectoryPlanner.cpp  ContactForceWrenchTrajectoryPlanner.cpp  JointTrajectoryPlanner.cpp
src/visualization/: LeggedVisualizer.cpp
src/weight_compensation/: PinocchioWeightCompensator.cpp
terrain_model/: CMakeLists.txt  package.xml
test/collision/: CollisionSettingsTest.cpp  PinocchioForwardCollisionKinematicsCppAdTest.cpp  PinocchoCollisionInterfaceTest.cpp
test/common/: AccessHelperFunctionsTest.cpp  EulerTransformsTest.cpp  ModelHelperFunctionsTest.cpp  ModelSettingsTest.cpp  UtilsTest.cpp
test/config/: base_settings.info  collision_settings.info  end_effector_soft_constraint_settings.info  force_friction_constraint_settings.info  gait_settings.info  inverse_solver_settings.info  joint_torque_limits_soft_constraint_settings.info  legged_interface_settings.info  model_settings.info  normal_orientation_soft_constraint_settings.info  reference_manager_settings.info  swing_trajectory_planner_settings.info  trajectory_tracking_cost_settings.info  wrench_friction_constraint_settings.info  wrench_friction_soft_constraint_settings.info
test/constraint/: ForceFrictionConeConstraintTest.cpp  (+1 more)
(+203 files in other folders)
