<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>legged_locomotion_control</name>
  <version>0.0.0</version>
  <description>Metapackage for Legged Locomotion Control</description>
  <maintainer email="bartlomiejk@vp.pl">bartek</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- All packages -->
  <exec_depend>legged_locomotion_mpc</exec_depend>
  <exec_depend>floating_base_model</exec_depend>
  <exec_depend>terrain_model</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>